made experimenting also slighlty more reproducible

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -16,12 +16,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inverted_list, perm_index, rev_perm_index, n_word_index, _, main_df = startup_engine()"
+    "# paths for our data\n",
+    "path1 = \"/home/majime/programming/github/search-engine/data/tokenized/auto.csv\"\n",
+    "path2 = \"/home/majime/programming/github/search-engine/data/tokenized/property.csv\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inverted_list, perm_index, rev_perm_index, n_word_index, _, main_df = startup_engine(path1, path2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
