completed removal of static paths

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from query_functions import search\n",
-    "from setup import startup_engine"
+    "from setup import startup_engine\n",
+    "import os"
    ]
   },
   {
@@ -16,9 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# paths for our data\n",
-    "path1 = \"/home/majime/programming/github/search-engine/data/tokenized/auto.csv\"\n",
-    "path2 = \"/home/majime/programming/github/search-engine/data/tokenized/property.csv\""
+    "# paths for our data (going one dorectory above)\n",
+    "workdir = os.getcwd()\n",
+    "parent_path = os.path.dirname(workdir)\n",
+    "csv_path = parent_path + \"/data/tokenized/\"\n",
+    "import glob \n",
+    "csvs = glob.glob(csv_path + \"*.csv\")"
    ]
   },
   {
@@ -27,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inverted_list, perm_index, rev_perm_index, n_word_index, _, main_df = startup_engine(path1, path2)"
+    "inverted_list, perm_index, rev_perm_index, n_word_index, _, main_df = startup_engine(*csvs)"
    ]
   },
   {
