removed some parts of example nb that were theory

--- a/src/example_usage.ipynb
+++ b/src/example_usage.ipynb
@@ -38,145 +38,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 1: Pipeline for extracting, cleaning and tokenizing text from pdfs\n",
-    "\n",
-    "### 1.1: Extracting text from pdfs\n",
-    "\n",
-    "The pdfs are extracted using the `fitz` Python library. `fitz`  is a wrapper around the `PyMuPDF` library. A pipeline is created to extract text from the pdfs and save them as `.pkl` files. The pipeline is as follows:\n",
-    "\n",
-    "1. Extract text from pdfs using `fitz`\n",
-    "\n",
-    "2. Store the contents of each file in a dictionary with `\"text\"` as the key and the extracted text separated page-wise in a list as the value. (in a `.pkl` file)\n",
-    "\n",
-    "3. Repeat for all pdfs and separate them in the same folder structure as the original pdfs. \n",
-    "\n",
-    "**Note:** Implementation of this step ican be found in the `cleaning.py` file. (fully documented)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.2: Lemmatizing and creation of posting lists\n",
-    "\n",
-    "From the created `.pkl` files we create a `DataFrame` with the following columns:\n",
-    "\n",
-    "1. `id`: to uniquely identify passages ('documents' for our engine)\n",
-    "\n",
-    "2. `text`: the text of the passage (split based on two newlines `\\n \\n` and `\\n\\n` and restricted to ~ 3000 characters per passage)\n",
-    "\n",
-    "3. `tokenized`: the lemmatized version of the text in the paragraph (`spaCy` was used for lemmatization)\n",
-    "\n",
-    "4. `posting_list`: the posting list for the passage (unique lemmas from `tokenized`)\n",
-    "\n",
-    "5. `document_name`: the name of the pdf file from which the passage was extracted\n",
-    "\n",
-    "6. `page_number`: the page number of the pdf from which the passage was extracted\n",
-    "\n",
-    "7. `paragraph_number`: the paragraph number of the page from which the passage was extracted\n",
-    "\n",
-    "\n",
-    "**Note:** Implementation of the above steps can be found in the `tokenizing.py` file. (fully documented)\n",
-    "\n",
-    "**Note 2:** The entire process outlined till here is in a pipeline, so adding new pdfs, new folders will not need any change of code except for the paths in the `cleaning.py` file."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2: Construction of inverted index and permuterm indexes\n",
-    "\n",
-    "### 2.1: Inverted index\n",
-    "\n",
-    "The inverted index which is used for boolean querying and ranking later on is constructed using the `posting_list` column of the `DataFrame` created in the previous step. The inverted index is a dictionary with the keys as the unique lemmas and the values as the sorted list of documents in which the lemma occurs. \n",
-    "\n",
-    "The documents are sorted based on the `id` column of the `DataFrame` and the `id` is the index of the document in the `DataFrame`.\n",
-    "\n",
-    "The data structure used for this is the default Python `dict`, whose keys are `str`s and values are `LinkedList`s (implemented in in `LinkedList.py`).\n",
-    "\n",
-    "**Visual example:**\n",
-    "\n",
-    "```python\n",
-    "{\n",
-    "    \"lemma1\": [12] -> [34] -> [56] -> [78] -> [90],\n",
-    "    \"lemma2\": [1] -> [2] -> [3] -> [4] -> [5] -> [6] -> [7] -> [8] -> [9] -> [10],\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2: Permuterm indexes\n",
-    "\n",
-    "The permuterm indexes (normal and reverse) are constructed using the `inverted_index` created in the previous step. The permuterm indexes are dictionaries with the keys as the permuterm and the values as the sorted list of documents in which the permuterm occurs.\n",
-    "\n",
-    "Like the inverted index, the documents are sorted based on the `id` column of the `DataFrame` and the `id` is the index of the document in the `DataFrame`.\n",
-    "\n",
-    "**Visual example:**\n",
-    "\n",
-    "1. Normal permuterm index\n",
-    "\n",
-    "```python\n",
-    "{\n",
-    "    \"$lemma1\": [12] -> [34] -> [56] -> [78] -> [90],\n",
-    "    \"$lemma\": [12] -> [34] -> [56] -> [78] -> [90], [108],\n",
-    "    \"$lemm\" : [12] -> [34] -> [56] -> [78] -> [90], [108], [109],\n",
-    "    \"$lem\"  : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110],\n",
-    "    \"$le\"   : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110], [111],\n",
-    "    \"$l\"    : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110], [111], [112],\n",
-    "\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "2. Reverse permuterm index\n",
-    "\n",
-    "```python\n",
-    "{\n",
-    "    \"$1ammel\": [12] -> [34] -> [56] -> [78] -> [90],\n",
-    "    \"$ammel\": [12] -> [34] -> [56] -> [78] -> [90], [108],\n",
-    "    \"$mmel\" : [12] -> [34] -> [56] -> [78] -> [90], [108], [109],\n",
-    "    \"$mel\"  : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110],\n",
-    "    \"$el\"   : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110], [111],\n",
-    "    \"$l\"    : [12] -> [34] -> [56] -> [78] -> [90], [108], [109], [110], [111], [112],\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 Biword index\n",
-    "\n",
-    "The biword index is used to query `phrase` queries. It is constructed using the `tokenized` column of the `DataFrame` created in the previous step. The biword index is a dictionary with the keys as the unique biwords and the values as the sorted list of documents in which the biword occurs.\n",
-    "\n",
-    "**Visual example:**\n",
-    "\n",
-    "```python\n",
-    "{\n",
-    "    \"lemma1 lemma2\": [12] -> [34] -> [56] -> [78] -> [90],\n",
-    "    \"lemma2 lemma3\": [1] -> [2] -> [3] -> [4] -> [5] -> [6] -> [7] -> [8] -> [9] -> [10],\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "\n",
-    "Implementation of the above steps can be found in the `setup.py` file. (fully documented)\n",
-    "\n",
-    "**Note**: The indexes could not be saved as `.pkl` files due to the size of the indexes (hitting the maximum possible recursion limit in Python). So instead of saving these indexes, there is currently a function `start_engine` which creates and returns these indexes along with the main `DataFrame` which is used for lookups. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -190,17 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Important statistics\n",
-    "\n",
-    "While the `start_engine` function takes around `30s` to create all required indexes, this is only a 1 time run per startup, and any subsequent query will be answered in `~0.1s` (for boolean retrieval and ranking) as can be seen later on."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3: Boolean retrieval/filtering\n",
+    "## Boolean retrieval/filtering\n",
     "\n",
     "The boolean filter can either be used:\n",
     "\n",
@@ -208,7 +59,7 @@
     "\n",
     "2. As a precursor to the ranking algorithm, if the user wishes to rank the documents based on the query, so that we wont have to rank documents which do not match the query. \n",
     "\n",
-    "### 3.1: Free queries\n",
+    "### Free queries\n",
     "\n",
     "I've implemented querying of:\n",
     "\n",
@@ -331,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2: Phrase queries\n",
+    "### Phrase queries\n",
     "\n",
     "The phrase queries are implemented using the biword index. The query string is split into biwords and the documents which contain all the biwords are returned. To set your query as a phrase query/ give importance to the order of the words in the query, set the `is_phrase` parameter to `True` in the `search` function.\n"
    ]
@@ -373,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3: Wildcard matching\n",
+    "### Wildcard matching\n",
     "\n",
     "Wildcards are automatically detected in the query string and the documents which contain the wildcard are returned. The wildcard can be placed anywhere in the query string. For example, the query `infor*` will return all documents which contain words starting with `infor`. The query `*tion` will return all documents which contain words ending with `tion`. The query `inf*tion` will return all documents which contain words starting with `inf` and ending with `tion`.\n",
     "\n",
@@ -521,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4: Spelling correction\n",
+    "### Spelling correction\n",
     "\n",
     "The engine first assumes that the spelling is correct. But if no documents are returned by the boolean filter, the engine finds the closest words to all non wildcard query words and returns the results of an `OR` query of all the closest words. Spell checking is turned off by default, but can be turned on by setting the `spell_check` parameter to `True` in the `search` function.\n",
     "\n",
@@ -587,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5: Autocomplete suggestions\n",
+    "### Autocomplete suggestions\n",
     "\n",
     "To mimic the autocomplete feature of Google search, I've implemented a feature which returns the top 5 most frequent words in the documents which contain the query string. This is turned off by default, but can be turned on by setting the `autocomplete` parameter to `True` in the `search` function.\n",
     "\n",
@@ -632,13 +483,13 @@
     "tags": []
    },
    "source": [
-    "## Step 4: Ranking of documents\n",
+    "## Ranking of documents\n",
     "\n",
-    "### 4.1: Opting out of ranking\n",
+    "### Opting out of ranking\n",
     "\n",
     "As mentioned earlier, the ranking algorithm can be turned off if all that is required is a boolean filter. To turn off the ranking algorithm, set the `ranked` parameter to `False` in the `search` function.\n",
     "\n",
-    "### 4.2: TF-IDF scores\n",
+    "### TF-IDF scores\n",
     "\n",
     "The ranking is done based on the TF-IDF scores of the query words in the documents. The TF-IDF scores are calculated using the `inverted_index` created in the previous step. The TF-IDF scores are calculated for each word in the query string and the final score of a document is the sum of the TF-IDF scores of all the words in the query string.\n",
     "\n",
