removed extra exa,mple of wc with OR

--- a/src/example_usage.ipynb
+++ b/src/example_usage.ipynb
@@ -259,40 +259,8 @@
     }
    ],
    "source": [
-    "# Type 1 wildcard query\n",
+    "# Wildcard query with `OR`\n",
     "user_search(\"prot* *tion\", num_docs=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Documents Retrieved: 1\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "Rank: 1\n",
-      "Document Name: rsa_property_owners_policy_wording\n",
-      "Page Number: 40\n",
-      "Paragraph Number: 1\n",
-      "Score: 24.821053129151498\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "Paragraph Text: \n",
-      "40 | Properties Policysection 5 Data protectionWhat is coveredWhat is not covered1 The defence of any Legal proceedings brought against You for compensation under Section 13 of the Data Protection Act 1998 provided that You are already registered with the Data Protection Commissioner2 An appeal by You againstA) the refusal of Your application for registration by the Data Protection CommissionerB) the refusal of an application for alteration of registered particulars by the Data Protection CommissionerC) an enforcement noticeD) a de-registration noticeE) a transfer prohibition noticeprovided that You agree to appoint our Administrator’s approved consultant as Your Appointed representative in accordance with Requirement 4 A) i) 1 Any amount in excess of the Limit of indemnity for Any one Claim shown in the schedule 2 Legal expenses arising from or relating toA) any criminal prosecutionB) any legal action concerning the grant and/or execution of a warrant of entryC) any claim where You do not appoint our Administrator’s approved consultant as the Appointed representative in accordance with Requirement 4 A) i)D) a matter which is more specifically covered by another Insurance section of this policy or would have been had it not been for an exclusion or proviso applying to that Insurance \n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Type 2 wildcard query\n",
-    "user_search(\"pro*ion\", num_docs=1)"
    ]
   },
   {
